# NetflowSight

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  run.py
data/sources/: custom_enterprise-domains.txt  example_sources.json  exported_config.json  mock_incremental.txt  state.json
docs/: ENGINEERING_REPORT.md  QUICK_START.md  data_source_guide.md  incremental_update_guide.md  plugin_development.md  startup_guide.md  strategy_guide.md
models/: domain_features.txt
scripts/: check_sources.py  run.py  test_pcap.py  train_domain_classifier.py  update_sources.py
src/: __init__.py  analyzer.py  cli.py
src/ai/: __init__.py  mcp_server.py
src/core/: __init__.py  config.py  interfaces.py  models.py  parser.py
src/datasource/: __init__.py  manager.py  strategy.py
src/engines/: __init__.py  abuseipdb_detector.py  domain_classifier.py  smart_threat.py
src/engines/behavior/: __init__.py  behavior_detector.py
src/engines/covert/: __init__.py  covert_detector.py
src/engines/dns/: __init__.py  dns_detector.py
src/engines/http/: __init__.py  http_detector.py
src/intel/: __init__.py  abuseipdb_detector.py  cache.py  client.py  fusion.py  smart_threat.py  threatbook.py
src/ml/: __init__.py  classifier.py  domain_classifier.py  safe_loader.py
src/plugins/: __init__.py  adapters.py  base.py  interfaces.py  manager.py  registry.py
src/report/: __init__.py  ai_report.py  generator.py  html_generator.py
src/utils/: __init__.py  cache_manager.py
src/visualization/: __init__.py  topology.py
tests/: conftest.py  test_abuseipdb_detector.py  test_cache_manager.py  test_datasource_manager.py  test_domain_classifier.py  test_html_generator.py  test_ml_classifier.py  test_models.py  test_safe_loader.py  test_threat_cache.py
